--- a/legalTech/src/main/webapp/assets/css/main.css
+++ b/legalTech/src/main/webapp/assets/css/main.css
@@ -149,7 +149,7 @@ textarea
 
     /* Turn off scroll bars in IE unless needed */
     overflow:auto;
-    outline-width: 0;
+  /*   outline-width: 0; */
 }
 
 /* Selects
@@ -168,7 +168,22 @@ select[multiple]
     /* Move the label to the top */
     vertical-align:top;
 }
+
+
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic|Josefin+Sans&display=swap');
+
+
+/* font */
+@font-face {
+   font-family: 'Noto Sans KR';
+   font-style: normal;
+   font-weight: 400;
+   src: url(../font/NotoSansKR-Regular.woff2) format('woff2'),
+        url(../font/NotoSansKR-Regular.woff) format('woff'),
+        url(../font/NotoSansKR-Regular.otf) format('opentype');
+ }
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -230,7 +245,7 @@ a, a:active, a:visited, a:hover {
 html, body{
     font-size:16px;
     color:#333;
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family:'Noto Sans KR',-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
 .wrapper{
     width:100%;
@@ -284,6 +299,7 @@ html, body{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    
 }
 .d-column {
     -webkit-box-orient: vertical;
@@ -347,8 +363,10 @@ html, body{
 .visual{height:400px;position:relative;background:url(../images/sky.jpg) no-repeat 56% 42%;background-size: cover;}
 .visual__txt .wrap{-webkit-box-align:center;-ms-flex-align:center;align-items:center;}
 .visual__txt{padding-top:120px;}
+/*
 .visual__txt h2{font-size:36px;color:#fff;font-weight:600;margin-bottom:20px;}
 .visual__txt p{font-size:21px;color:#fff;}
+*/
 .visual__step{background:rgba(151,126,91,.7);position:absolute;left:0;bottom:0;width:100%;}
 .visual__step__item{width:314px;height:72px;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-size:21px;color:#fff;border-right:1px solid #977e5b;}
 .visual__step__item:nth-child(1){border-left:1px solid #977e5b;}
@@ -521,17 +539,16 @@ html, body{
 .table td{height:55px;border-bottom:1px solid #d8d8d8;font-size:20px;color:#000;padding-left:30px;}
 
 /* qna */
-.qnaWrapper{position:fixed;right:0;top:0;z-index: 1000;height: 100%;width: 100%;display: none;}
+.qnaWrapper{position:fixed;right:0;top:0;z-index: 1000;height: 100%;width: 100%;display: none; -webkit-transition:all .3s;transition:all .3s;}
 .qna__bg{width: 100%;height: 100%;background:rgba(0,0,0,0.7);}
 .qnaBox{width:940px;border-radius:15px 0 0 15px;height: 95%;overflow: auto;overflow:auto;position:absolute;right:0;top:2.5%;-webkit-transition:all .3s;transition:all .3s;}
 
 .qnaWrapper.js-active{display: block;}
 
-
 .qna__head{width:100%;height:88px;background:#977e5b;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;position:relative;}
 .qna__head h2{color:#fff;font-size:30px;font-weight:400;}
-.qna__close{height:100%;width:24px;position:absolute;right:43px;top:50%;-webkit-transform:translateY(-50%);-ms-transform:translateY(-50%);transform:translateY(-50%);}
-.qna__close::after{content:'';width:24px;height:2px;background:#fff;position:absolute;left:0;top:50%;-webkit-transform:translateY(-50%);-ms-transform:translateY(-50%);transform:translateY(-50%);}
+.qna__close{height:100%;width:24px;position:absolute;right:43px;}
+.qna__close::after, .qna__close::before{content:'';width:24px;height:2px;background:#fff;position:absolute;left:0;top:50%;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}
 .qna__body{background:#fff;padding:75px 0;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;}
 .messages{width:780px;border:1px solid #d8d8d8;border-radius:10px;overflow:hidden;}
 .messages__head{padding:30px;background:#fff;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}
@@ -547,11 +564,11 @@ html, body{
 .messages__body .txtArea__txt{background:#e8e8e8;padding:25px 30px;position:relative;border-radius:4px;}
 .messages__body .txtArea__txt::before{content:'';width:15px;height:15px;background:#e8e8e8;-webkit-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg);position:absolute;left:-7px;top:15px;}
 .messages__body .txtArea__txt p{font-size:16px;color:#000;line-height:24px;font-weight:400;}
-.messages__body .txtArea__time{color:#6a6a6a;font-weight:400;margin:0 15px;}
+.messages__body .txtArea__time{color:#6a6a6a;font-weight:400;margin:0 12px;}
 .messages__body li.right{-webkit-box-pack:end;-ms-flex-pack:end;justify-content:flex-end;} 
 .messages__body li.right .txtArea__txt{background:#fff;border:1px solid #e8e8e8;}
 .messages__body li.right .txtArea__txt::before{content:'';width:15px;height:15px;background:#fff;border:1px solid #e8e8e8;-webkit-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg);position:absolute;left:auto;right:-9px;top:15px;border-width:1px 1px 0 0;}
-.messages__body .txtArea__file{border:1px solid #d8d8dd;padding:15px 25px;border-radius:4px;margin-top:15px;}
+.messages__body .txtArea__file{border:1px solid #d8d8dd;padding:5px 20px;border-radius:4px;margin-top:15px;}
 .messages__body .file__link{-webkit-box-align:center;-ms-flex-align:center;align-items:center;}
 .messages__body .file__thumb{margin-right:15px;width:65px;height:65px;border:1px solid #d8d8d8;border-radius:4px;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;position:relative;}
 .messages__body .file__thumb .img{}
@@ -561,17 +578,17 @@ html, body{
 .messages__body .file__info p{font-size:14px;color:#6a6a6a;-webkit-box-align:baseline;-ms-flex-align:baseline;align-items:baseline;}
 .messages__body .file__info .fileSize{margin-left:15px;}
 .messages__foot{background:#fff;padding:30px;}
-.messages__foot .userTxt{width:720px;height:140px;border:1px solid #d8d8d8;overflow:auto;position:relative;margin-bottom:15px;}
-.messages__foot .userTxt textarea{width:95%;height:100%;padding:20px;-webkit-box-sizing:border-box;box-sizing:border-box;margin-left:5%;line-height:24px;}
+.messages__foot .userTxt{width:720px;height:240px;border:1px solid #d8d8d8;overflow:auto;position:relative;margin-bottom:15px;}
+.messages__foot .userTxt textarea{width:95%;height:80%;padding:20px;-webkit-box-sizing:border-box;box-sizing:border-box;margin-left:2%;line-height:24px;}
 .messages__foot .userTxt textarea::-webkit-input-placeholder{font-size:16px;color:#d8d8d8;line-height:24px;}
 .messages__foot .userTxt textarea::-moz-placeholder{font-size:16px;color:#d8d8d8;line-height:24px;}
 .messages__foot .userTxt textarea:-ms-input-placeholder{font-size:16px;color:#d8d8d8;line-height:24px;}
 .messages__foot .userTxt textarea::-ms-input-placeholder{font-size:16px;color:#d8d8d8;line-height:24px;}
 .messages__foot .userTxt textarea::placeholder{font-size:16px;color:#d8d8d8;line-height:24px;}
-.messages__foot .userTxt .data__fileBox{position:absolute;right:auto;left:20px;top:20px;}
+/* .messages__foot .userTxt .data__fileBox{position:absolute;right:auto;left:20px;top:20px;} */
 .messages__foot .userTxt .data__fileBox .data__upload{border:none;background:none;}
 .messages__foot .userTxt .data__fileBox .data__upload--file{background:url(../images/icon/attatch.png) no-repeat center;width:24px;height:24px;opacity:.3;}
-.messages__foot .data__upload{margin-left:auto;}
+/*.messages__foot .data__upload{margin-left:auto;}*/
 
 /* title */
 .conTit{margin-bottom:50px;text-align:center;}
@@ -581,7 +598,8 @@ html, body{
 
 /* popup */
 .popupBox{position:fixed;width:100%;height:100%;left:0;top:0;z-index:1000;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}
-.popup__bg{background:rgba(0, 0, 0, 0.6);position:fixed;width:100%;height:100%;}
+/*.popup__bg{background:rgba(0, 0, 0, 0.6);position:fixed;width:100%;height:100%;}*/
+.popup__bg{background:rgba(0, 0, 0, 0.6);position:absolute;top:0;left:0;width:100%;height:100%;}
 .popup{max-height:90%;overflow:auto;}
 .popup .wrap{width:940px;padding:0;background:#fff;padding-bottom:20px;}
 .popupTit{font-size:21px;color:#000;height:88px;padding:0 30px;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-weight:600;position:relative;}
@@ -591,7 +609,7 @@ html, body{
 .contract .wrap{border:1px solid #d8d8d8;padding:0;width:940px;}
 .contract__head{font-size:21px;color:#000;font-weight:600;height:88px;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:0 30px;}
 .contract__row--txt{border-top:1px solid #d8d8d8;border-bottom:1px solid #d8d8d8;background:#f9f9f9;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;height:680px;overflow:auto;font-size:16px;color:#6a6a6a;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}
-.contract__txtInner{background:#fff;width:730px;height:800px;}
+.contract__txtInner{background:#fff;width:730px;height:auto;margin-top:auto;padding:50px 20px}
 .contract__input{-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;padding:0 30px;height:88px;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}
 
 /* qna */
@@ -753,5 +771,16 @@ input[type="submit"].logbtn:hover{
   font-size: 13px;
 }
 
+/* 이형진 추가 */
 .sign_img {max-width:85%;border:1px soild #bbb}
 .btn-del {display:inline-block;width:12px;height:12px;background:url(../images/btn_del.gif) no-repeat left top;cursor:pointer;vertical-align:bottom}
+
+.qna__close:hover::before{transform:rotate(45deg);}
+.qna__close:hover::after{transform:rotate(135deg);}
+
+.visual__txt h2 { font-family: 'Josefin Sans', sans-serif; letter-spacing: 2.5px; font-size: 3em;color:#fff;font-weight:600;margin-bottom:20px;}
+.visual__txt p { font-family: 'Nanum Gothic', sans-serif;font-size:21px;color:#fff; }
+/* 남승우 추가 */
+
+
+
